Fixed a few Bugs.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,11 @@ body{
 }
 
 .image{
-	max-width: 40%;
+	max-width: 100%;
+}
+
+.shadowed{
+	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .logincontainer{
