--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,7 @@ body{
 	font-family: Arial,sans-serif;
 	line-height: 2;
 	border: 0;
+	min-height: 100vh;
 }
 
 /*	Now time for the real components. */
@@ -96,6 +97,7 @@ body{
 .subjectname{
 	font-size: 1.8em;
 	font-weight: normal;
+	cursor: pointer;
 }
 
 .semester{
@@ -187,4 +189,71 @@ ul > li > .left{
 	margin: 0;
 	line-height: 2;
 	height: auto;
+}
+
+/* Modal Box for References */
+
+.modalclass {
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100% !important;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+/* Modal Content/Box */
+.modalContent {
+  background-color: #fefefe;
+  margin: 15% auto;
+  box-shadow: 0 24px 38px 3px rgba(0,0,0,0.14), 0 9px 46px 8px rgba(0,0,0,0.12), 0 11px 15px -7px rgba(0,0,0,0.2);
+  border-radius: 0.15rem;
+  width: 80%;
+}
+
+.modalHeader{
+	display: flex;
+	background: #111518;
+	color: #fff;
+	border-bottom: 0.1rem solid #343434;
+}
+
+.modalHeader .heading{
+	flex: 7;
+	margin: 0;
+	font-size: 1.2em;
+	padding: 0.9rem;
+}
+
+/* The Close Button */
+.close {
+  color: #ffffff;
+  flex: 1;
+  text-align: right;
+  padding: 1.3rem;
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modalBody{
+	padding: 1rem;
+}
+
+@media only screen and (max-width: 550px){
+	/* Phones */
+
+	.modalContent{
+		margin: 30% auto;
+	}
 }
